test/cases/compile_errors/outdented_block.zig
	comptime {
_ = "outdented";
	}

// error
// backend=stage2
// target=native
//
// :2:1: error: block is outdented from surrounding block
// :1:2: note: previous indentation level set here
